<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">DroiHealth</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="action_get_data">Running receiving data</string>
    <string name="left_error_tip">Nothing ahead!</string>
    <string name="right_error_tip">Please wait patiently, tomorrow will come!</string>
    <string name="action_menu_share">Share</string>
    <string name="share_success">Share success</string>
    <string name="share_fail">Share failed</string>
    <string name="today">Today</string>
    <string name="back_to_today">Back to today</string>
    <string name="weibosdk_demo_toast_auth_success">Authorization success</string>
    <string name="weibosdk_demo_toast_auth_failed">Authorization failed</string>
    <string name="weibosdk_demo_toast_auth_canceled">Authorization cancel</string>
    <string name="weibosdk_demo_toast_obtain_code_failed">Failed to get Code</string>
    <string name="action_get_persion_config">Synchronize personal information</string>
    <string name="loading_data">Syncing with the remote device, please wait!</string>
    <string name="connect_time_out">Connecting to a remote device timeout!</string>
    <string name="get_complete">Data sync done!</string>
    <string name="calories">Calorie</string>
    <string name="steps">Step</string>
    <string name="pm2_5">Air quality</string>
    <string name="serious_pollution">Serious Pollution</string>
    <string name="serious_pollution_in">Hey, the air is too bad to say anything&#8230;</string>
    <string name="middle_pollution">Moderately Pollution</string>
    <string name="middle_pollution_in">Bad air quality, strongly suggest wearing a respirator.</string>
    <string name="slightly_pollution">Light Pollution</string>
    <string name="slightly_pollution_in">Generally air quality, suggest exercising indoors.</string>
    <string name="fine">Good</string>
    <string name="fine_in">Air is good for outdoor exercise.</string>
    <string name="excellent">Excellent</string>
    <string name="excellent_in">Nice air quality, call on friends to play outdoor.</string>
    <string name="no_pm2_5">There is no air data today, have a look out the window.</string>
    <string name="burn_calories">burn calories</string>
    <string name="unit_calories">kCal</string>
    <string name="run_duration">exercise time</string>
    <string name="run_unit"> min</string>
    <string name="run_steps">movement steps</string>
    <string name="shortcut_title">Whether to create a desktop shortcut?</string>
    <string name="shortcut_msg">Some models launcher does not support the creation of desktop shortcuts, may make it impossible to create.</string>
    <string name="shortcut_msg2">Whether the prompt is displayed each time you start?</string>
    <string name="creat">creat</string>
    <string name="ok">OK</string>
    <string name="cancle">Cancel</string>
    <string name="shortcut_exsited">Shortcut already exists.</string>
    <string name="input_name">Enter username</string>
    <string name="daliy_exercise">Daily exercise</string>
    <string name="step">steps</string>
    <string name="best_value">Personal bests</string>
    <string name="day">days finished</string>
    <string name="day1">days</string>
    <string name="get_goals">Continuous goals</string>
    <string name="less_2000">2000 steps or less</string>
    <string name="less_4000">2000&#8211;4000 steps</string>
    <string name="less_7000">4000&#8211;7000 steps</string>
    <string name="less_9000">7000&#8211;9000 steps</string>
    <string name="more_9000">9000 steps or more</string>
    <string name="persion_config">Personal</string>
    <string name="persion_goal">Personal goal</string>
    <string name="calculate_exercise">Calculate the amount of exercise</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="pre">Previous</string>
    <string name="next">Next</string>
    <string name="set_exercise">Set the daily intened amount of exercise</string>
    <string name="general">Ordinary</string>
    <string name="activists">Activist</string>
    <string name="madman">Maniac</string>
    <string name="step_spe">(Step)</string>
    <string name="calories_spe">(Cal)</string>
    <string name="save">Save</string>
    <string name="kcal">kCal</string>
    <string name="share_tv">Worship it, like the wind exists.</string>
    <string name="share_show">You have done quite well to show off!</string>
    <string name="share_input">Please enter publish content</string>
    <string name="check_network">Please check your network settings.</string>
    <string name="walk">Walk</string>
    <string name="kilometre">km</string>
    <string name="goals">Goal:</string>
    <string name="weibo_login">Weibo Login</string>
    <string name="share_mistake">There is a blank in pictures or text.</string>
    <string name="rice">bowl of rice</string>
    <string name="chocolate">gram of chocolate</string>
    <string name="ice_cream">ice cream</string>
    <string name="fat">gram of fat</string>
    <string name="cake">piece of cake</string>
    <string name="milk_tea">cup of milk tea</string>
    <string name="hamburger">hamburger</string>
    <string name="large_fries">bag of large fries</string>
    <string name="syncs_persion_setting">Sync personal settings</string>
    <string name="syncs_persion_setting_message">The personal information is different between the device and phone, please select to upload or download.</string>
    <string name="upload">Upload to device</string>
    <string name="download">Download to phone</string>
    <string name="install_weixin">Please install WeChat.</string>
    <string name="weixin_no_support">The WeChat you have installed does not support this feature.</string>
    <string name="weixin_no_support_quan">The WeChat you have installed dose not support sharing to Moments, please update to 4.2 or later.</string>
    <string name="install_qq">Please install QQ.</string>
    <string name="select_platform">Please select a platform.</string>
    <string name="least_step">Steps can not be less than 5000.</string>
    <string name="most_step">Steps can not be more than 59999.</string>
    <string name="know">OK</string>
    <string name="guide_step_1">(1/5) Select Sex</string>
    <string name="guide_step_2">(2/5) Select Weight</string>
    <string name="guide_step_3">(3/5) Select Height</string>
    <string name="guide_step_4">(4/5) Select the date of birth</string>
    <string name="guide_step_5">(5/5) Select goal</string>
    <string name="guide_test_center_5">(5/5) Measuring Center</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="modify">Modify</string>
    <string name="one_day_most_step">Most daily steps</string>
    <string name="one_day_avg_step">Average daily steps</string>
    <string name="one_day_most_cal">Most daily consumption</string>
    <string name="one_day_avg_cal">Average daily consumption</string>
    <string name="total_walk">In total </string>
    <string name="total_cal">Total consumed calories</string>
    <string name="motion_goal">Aim</string>
    <string name="achieve_goal">Finish target</string>
    <string name="achieve_goal1"></string>
    <string name="completion_rate">Completed</string>
    <string name="bmi">BMI</string>
    <string name="bmi_intro">BMI is body mass index, the smaller the value, the thinner body</string>
    <string name="bmr_describe">The daily burned caloric</string>
    <string name="bmr_intro">Basal metabolism is the energy the body will consume daily even you do nothing</string>
    <string name="unit_age"></string>
    <string name="like_sports">Favorite sports</string>
    <string name="take_photo">Photograph</string>
    <string name="chose_from_camera">Select from album</string>
    <string name="questions_tv1">Click device synchronization unresponsive</string>
    <string name="questions_tv2">Is about the security settings and permissions for the mobile phone side of the phone. View mobile terminal applications, EMove related settings, on the status bar, notification bar, you need to open windows and other suspended, rights management needs to trust the program. If you are still not open after synchronization, disconnect reconnect. For example: Millet 3 phone after installation EMove, want to end the phone Go to Settings - Applications -EMove, click enter, the custom display notifications in the notification bar notification and display the status bar notification to open, in the bottom of my rights management trust the program opens. OPPO phone comes with the Security Center, to enter the security center - pure background will EMove added.</string>
    <string name="questions_tv5">Play music without sound mobile terminal</string>
    <string name="questions_tv6">Keep the phone about 15 seconds pause music ends, continue to play, if still no sound, disconnect the Bluetooth connection, reconnect once.</string>
    <string name="questions_tv7">After connecting the phone Bluetooth devices, settings menu, the Bluetooth device name is displayed below the Connected (no media) or connected (no phone)</string>
    <string name="questions_tv8">Disconnect the Bluetooth connection, reconnect once.</string>
    <string name="questions_tv9">Bluetooth device with your phone is connected, but the connection is not on EMove</string>
    <string name="questions_tv10">EMove mobile terminal enters the main interface, enter me, click on the Bluetooth name, manually connect again.</string>
    <string name="Sunday">Sun</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thur</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="persional_info_sport_tagert">Daily movement target</string>
    <string name="persional_info_goals1">7000</string>
    <string name="persional_info_goals2">10000</string>
    <string name="persional_info_goals3">15000</string>
    <string name="persional_info_goals4">custom</string>
    <string name="help_title">Help</string>
    <string name="help_subtitle1">Equipment near the phone?</string>
    <string name="help_subtext1">Devices using bluetooth and a phone connection, when connected devices, mobile phones and the closer the distance the more conducive to find equipment.</string>
    <string name="help_subtitle2">Device battery run out?</string>
    <string name="help_subtext2">If equipment and mobile distance is very near or did not find, may be because the device is power off. Please insert the device charger to charge, then try to use cell phone connection again.</string>
    <string name="help_subtitle3">Try to restart the bluetooth?</string>
    <string name="help_subtext3">If there are electrical equipment to confirm, and close to the cell phone still can\'t find, you can try the phone bluetooth is turned off to open, after a wait a moment, to search for equipment</string>
    <string name="help_subtitle4">Equipment has been binding and other cell phone?</string>
    <string name="help_subtext4">If your device is binding, and other mobile phone, and binding of mobile phone is still near the equipment, the binding mobile phone bluetooth, you need to be closed and then to use the new phone search equipment</string>
    <string name="steps_largen_question">Mobile phone display steps data too big?</string>
    <string name="steps_largen_anwser">When open the phone down, bluetooth and GPS steps at the same time, steps data will accumulate computation. to ensure consistent,please make sure that only use one the way to step down At some point.</string>
</resources>