<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical" >
        <include
            android:id="@+id/running_title"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            layout="@layout/running_actionbar" />
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/common_problem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:layout_marginTop="25dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/questions_tv1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_solvep1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                                android:lineSpacingExtra="5dip"
                android:text="@string/questions_tv2"
                android:textColor="#686868" />
        </LinearLayout>   

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="12dp"
            android:background="#C1C0C0" ></View>
        <LinearLayout
            android:id="@+id/common_problem2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/questions_tv5"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_solvep3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="5dip"
                android:text="@string/questions_tv6"
                android:textColor="#686868" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="12dip"
            android:background="#C1C0C0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/questions_tv7"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_solvep4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="5dip"
                android:text="@string/questions_tv8"
                android:textColor="#686868" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="12dip"
            android:layout_marginTop="25dp"
            android:background="#C1C0C0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/questions_tv9"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_solvep5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="5dip"
                android:text="@string/questions_tv10"
                android:textColor="#686868" />
        </LinearLayout>
        
         <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="12dip"
            android:layout_marginTop="25dp"
            android:background="#C1C0C0" />
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:layout_marginRight="12dip"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/steps_largen_question"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_solvep6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="5dip"
                android:text="@string/steps_largen_anwser"
                android:textColor="#686868" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
</LinearLayout>